POO class Estudient and Teacher

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             required
             />
 
-            <select aria-label="Default select" class="form-select mb-2">
+            <select aria-label="Default select" class="form-select mb-2" name="opcion">
                 <option value="Estudiante" selected>Estudiante</option>
                 <option value="Profesor">Profesor</option>
             </select>
@@ -36,7 +36,7 @@
                 <!--Template estudiante card-->
 
             </div>
-            
+
             <div class="col-6" id="cardsProfesores">
                 
                 <!--Template profesor card-->
