--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container my-5">
         <h1>students and teachers</h1>
-        <form id="form">
+        <div class="alert alert-danger d-none">
+            Please insert all the values
+        </div>
+        <form id="form" novalidate>
             <input type="text" class="form-control mb-2"
             name="name"
             placeholder="Insert name"
